# physikaX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/physikaX/physika/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/physikaX/physika/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/physikaX/physika/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
cmake-modules/: FindDirectX11.cmake  Findglfw.cmake  Findgtest.cmake  phi-scripts.cmake
include/vulkan/: vulkan_wrapper.cpp  vulkan_wrapper.hpp
src/: CMakeLists.txt
src/app-framework/: CMakeLists.txt  application-win32.cpp  application-win32.h  application.h  main.cpp
src/app-framework/example/: example-app.cpp  example-app.h  main.cpp
src/app-framework/include/app-framework/: application-win32.h  application.h  input.h
src/dx11-cube/: CMakeLists.txt  cube-app.cpp  cube-app.h  main.cpp
src/logger/: CMakeLists.txt  logger.cpp
src/logger/include/logger/: logger.h
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
src/renderer/vulkan/: vkRenderer.cpp  vkRenderer.h
src/simple-project/: CMakeLists.txt  main.cpp
src/simple-project/test/: simple-test.cpp
src/timer/: CMakeLists.txt  timer.cpp
src/timer/include/timer/: timer.h
src/timer/test/: timer-test.cpp
src/window-framework/: CMakeLists.txt  main.cpp
